Image crop keyframes/fcurves do not 'stick' to strip *NEED BLEND FILE* #28158

Closed
opened 2011-08-05 00:18:12 +02:00 by bassam kurdali · 9 comments
Member

%%%In the sequence editor, fcurves for sequence strips are supposed to 'stick' to their strips, such that translating a strip left or right (forward or back) in time results in the same transformation to the fcurves for that strip.

For the image Crop properties (max_x,max_y,min_x,min_y) this is not the case, and the fcurves have to be moved manually.

Note: this in itself is a regression from 2.4 where you could have IPOs in 'scene time' or 'strip time' This is no longer possible in 2.4, and we have 'strip time' via mirrored translations- in theory we should be able to have a strip property flag (use_animation_lock) or similar, that allows fcurves associated with that strip to move with it or not. But this is a feature request, the original bug report still stands.

OS ubuntu 10.10, intel cpu, nvidia gfx, 64 bit.
%%%

%%%In the sequence editor, fcurves for sequence strips are supposed to 'stick' to their strips, such that translating a strip left or right (forward or back) in time results in the same transformation to the fcurves for that strip. For the image Crop properties (max_x,max_y,min_x,min_y) this is not the case, and the fcurves have to be moved manually. Note: this in itself is a regression from 2.4 where you could have IPOs in 'scene time' or 'strip time' This is no longer possible in 2.4, and we have 'strip time' via mirrored translations- in theory we should be able to have a strip property flag (use_animation_lock) or similar, that allows fcurves associated with that strip to move with it or not. But this is a feature request, the original bug report still stands. OS ubuntu 10.10, intel cpu, nvidia gfx, 64 bit. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Works for me - note that this code didnt change recently, attached example blend file.

Could you please attach an example which fails?%%%

%%%Works for me - note that this code didnt change recently, attached example blend file. Could you please attach an example which fails?%%%
Author
Member

%%%Interesting, it's happening only on a (unfortunately huge) edit... will try to make it happen on a smaller file
%%%

%%%Interesting, it's happening only on a (unfortunately huge) edit... will try to make it happen on a smaller file %%%

%%%Suspect this is caused by a duplicate named sequence strip - which should never happen :S

Try rename the sequence strip to something you know is unique, then add fcurves and move.%%%

%%%Suspect this is caused by a duplicate named sequence strip - which should never happen :S Try rename the sequence strip to something you know is unique, then add fcurves and move.%%%
Author
Member

%%%Hi Campbell,
further testing on the file reveals it's something else
I think this happens because the strip in question is inside a metastrip - there are no duplicate names in the files (checked by looping over sequences_all in the console)
will see if the mere existance of a metastrip causes it in a new file, then report.
cheers
Bassam%%%

%%%Hi Campbell, further testing on the file reveals it's something else I think this happens because the strip in question is inside a metastrip - there are no duplicate names in the files (checked by looping over sequences_all in the console) will see if the mere existance of a metastrip causes it in a new file, then report. cheers Bassam%%%
Author
Member

%%%Hi Campbell, further testing:
If you have a metastrip within a metastrip, and it has crop fcurves they do not move with the strip if you move the top level metastrip:
this doesn't happen to the top level metastrip
this doesn't happen to another type of strip (color) within the metastrip
%%%

%%%Hi Campbell, further testing: If you have a metastrip within a metastrip, and it has crop fcurves they do not move with the strip if you move the top level metastrip: this doesn't happen to the top level metastrip this doesn't happen to another type of strip (color) within the metastrip %%%

%%%fixed r40652.%%%

%%%fixed r40652.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thanks Campbell!%%%

%%%Thanks Campbell!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28158
No description provided.